整数算术运算

--- a/translation/02_第二章.md
+++ b/translation/02_第二章.md
@@ -386,7 +386,7 @@ A line 1 1234.56
 
 > *object-name* **=** *expression*;
 
-在这里，`expression`必须得是一个可以被存储到赋值操作符（`=`）左边对象中的值。例如，表达式产生的浮点数结果可以存储到一个数字类型的对象中，字符串表达式（即一组用双引号`“”`括住的字符）可以存储到字符串类型的对象中。下面就让我们再来看几个赋值语句的示例：
+在这里，`expression`必须得是一个可以被存储到赋值操作符（`=`）左边对象中的值。例如，表达式产生的浮点数结果可以存储到一个数字类对象中，字符串表达式（即一组用双引号`“”`括住的字符）可以存储到字符串类型的对象中。下面就让我们再来看几个赋值语句的示例：
 
 ```C++
 double aNumber = -999.9;
@@ -524,18 +524,18 @@ int main() {
 
 ## 2.3 算术表达式
 
-本章的许多问题事实上都是在让我们编写算术表达式。算术表达式通常由运算符和操作数两部分组成。其中，*运算符*通常指的就是C++那些特殊符号`+`、`-`、`/`、`*`中的某一个。而*操作数*既可以是像之前`test1`这样的数字类型对象，也可以是像`0.25`这样的数字常量。下面我们假设x是一个`double`类型的实体，那么在以下表达式的操作数就是`x`和`0.25`，运算符就是`+`。
+本章的许多问题事实上都是在让我们编写算术表达式。算术表达式通常由运算符和操作数两部分组成。其中，*运算符*通常指的就是C++那些特殊符号`+`、`-`、`/`、`*`中的某一个。而*操作数*既可以是像之前`test1`这样的数字类对象，也可以是像`0.25`这样的数字常量。下面我们假设x是一个`double`类型的实体，那么在以下表达式的操作数就是`x`和`0.25`，运算符就是`+`。
 
     x + 4.5
 
 运算符和操作数将共同决定该算术表达式的值。
 
-算术表达式最简单的形式就单纯一个数字常量或数字类型的对象名，不过它也可以是两个操作数加一个运算符的形式（如下表所示）：
+算术表达式最简单的形式就单纯一个数字常量或数字类对象的名称，不过它也可以是两个操作数加一个运算符的形式（如下表所示）：
 
 | 算术表达式的形式       | 具体示例 |
 |---------------------|---------|
-| *数字类型对象*        | `x`     |
-| *数字类型常量*  | `100`或`99.5` |
+| *数字类对象*          | `x`     |
+| *数字类常量*    | `100`或`99.5` |
 | *表达式* + *表达式* | `x + 2.0` |
 | *表达式* - *表达式* | `x - 2.0` |
 | *表达式* * *表达式* | `x * 2.0` |
@@ -548,40 +548,38 @@ int main() {
 1.5 * ((x - 99.5) * 1.0 / x)
 ```
 
-Since arithmetic expressions may be written with many constants, numeric object names, and operators, rules are put into force to allow a consistent evaluation of expressions. The following table lists the five C++ arithmetic operators and the order in which they are applied to numeric objects.
+由于算术运算符的编写通常会用到多个常量、数字类对象的名称和运算符，所以其执行规则得要符合一般性表达式求值的需要。下表中列出了五个C++算术运算符，以及它们操作数字类对象的顺序。
 
-由于我们在编写算术表达式时可以使用多个常量、数字类型对象的名称和运算符，所以必须得有切实可行的规则来对这些表达执行一般性的求值操作。下表中列出了五个C++算术运算符，和他们作用在数字类型对象上的优先顺序。
+**二元算术运算符**
 
-**Binary Arithmetic Operators**
+| 运算符 | 处理规则 |
+|-------|---------|
+| `*`、`/`、`%` | 在没有括号的情况下，乘法、除法以及取模（%）这三种运算符的求值是先于加法与减法的。换句话说，就是`*`、`/`和`%`（对`int`取模）的优先级要高于`+`和`-`，如果这些运算符在同一个表达式中出现了不止一个，则从最左边的那个开始求值。|
+| `+`、`-` | 在没有括号的情况下，`+`与`-`这两种运算符的求值要在所有的`*`、`/`、`%`运算完成之后才会执行，顺序也是从左边开始。当然，括号可以覆盖掉以上这些处理规则。|
 
-| Operators | Precedence Rule |
-|-----------|-----------------|
-| * / %     | In the absence of parentheses, multiplication, division, and remainder (%), operators evaluate before addition and subtraction. In other words, *, /, and % (for the int remainder) have precedence over + and -. If more than one of these operators appear in an expression, the leftmost operator evaluates first. |
-| > + -     | In the absence of parentheses, + and - evaluate after all *, /, and % operators, with the leftmost evaluating first. Parentheses may override these precedence rules.|
-
-The operators of the following expression are applied to the operands in this order: /, +, and lastly -.
+譬如，以下表达式作用在操作数上的操作应该依次是：`/`、`+`、`-`。
 
 ```C++
 2.0 + 5.0 - 8.0 / 4.0 // Evaluates to 5.0
 ```
 
-Parentheses may alter the order in which arithmetic operators are applied to their operands.
+下面我们用括号来改变一下该表达式操作其在其操作数上的顺序。
 
 ```C++
 (2.0 + 5.0 - 8.0) / 4.0;    // Evaluates to -0.25
 ```
 
-With parentheses, the / operator evaluates last, rather than first.
+在加了括号之后，`/`运算符现在是最后一个被求值的，而不是第一个。
 
-These precedence rules apply to binary operators only. A *binary operator* is one that requires one operand to the left and one operand to the right. A *unary operator* only requires one operand on the right. Consider this expression, which has the binary operator \* and the unary minus operator -.
+以上这些处理规则针对的只是二元运算符。*二元运算符*的左右两侧通常各有一个操作数。下面我们来看只在右侧有操作数的*一元运算符*，先来看一个同时包含了二元运算符（`*`）和一元负值运算符的表达式(`-`)：
 
 ```C++
 3.5 * -2.0 // Evaluates to -7.0
 ```
 
-The unary operator evaluates before the binary \* operator: 3.5 times negative 2.0 (-2.0) results in negative 7.0 (-7.0).
+如你所见，一元运算符的求值要先于二元运算符（`*`)：即3.5乘以负2.0（即-2.0），结果为负7.0（即-7.0）。
 
-Arithmetic expressions usually have object names as operands. When C++ evaluates an expression with double objects, the object name is replaced with its state. Consider the following code:
+当然，算术表达式通常是以对象名为操作数的，但C++对一个`double`对象的表达式进行求值时，这些对象名会被他们的状态所替代，请看下面这段代码：
 
 ```C++
 double x = 1.0;
@@ -591,31 +589,31 @@ double z = 3.0;
 double answer = x + y * z / 4.0;
 ```
 
-When the program is running, the values stored in the variables are retrieved to get this equivalent expression:
+当程序运行时，被存储在变量中的值会被检索出来，我们得到的实际上是下面这个等效的表达式：
 
 ```C++
 double answer = 1.0 + 2.0 * 3.0 / 4.0; // store 2.5 into answer
 ```
 
-**SELF-CHECK**
+**自检题**
 
-2-13 Evaluate the following arithmetic expressions:
+2-13 请对以下算术表达式进行求值：
 
 ```C++
 double x = 2.5;
 double y = 3.0;
 ```
 
-* a.  x * y + 3.0
-* b.  0.5 + x / 2.0
-* c.  1 + x * 3.0 / y
-* d.  1.5 * (x - y)
-* e.  y + -x
-* f.  ( x - 2) * (y - 1)
+* a.  `x * y + 3.0`
+* b.  `0.5 + x / 2.0`
+* c.  `1 + x * 3.0 / y`
+* d.  `1.5 * (x - y)`
+* e.  `y + -x`
+* f.  `( x - 2) * (y - 1)`
 
-### 2.3.1 int ARITHMETIC
+### 2.3.1 整数算术运算
 
-The C++ language provides several numeric types. Perhaps the two most often used are double and int. An int object represents a limited range of whole numbers. There are times when int is the correct choice over double. An int object has operations similar to double (+, \*, -, =, &lt;&lt;, &gt;&gt;), but some diff erences do exist. For example, a fractional part cannot be stored in an int object. The fractional part is lost during an assignment statement.
+The C++ language provides several numeric types. Perhaps the two most often used are double and int. An int object represents a limited range of whole numbers. There are times when int is the correct choice over double. An int object has operations similar to double (+, \*, -, =, <<, >>), but some diff erences do exist. For example, a fractional part cannot be stored in an int object. The fractional part is lost during an assignment statement.
 
 ```C++
 int anInt = 1.999; // The state of anInt is 1, not 1.999
