--- a/translation/02_第二章.md
+++ b/translation/02_第二章.md
@@ -613,17 +613,17 @@ double y = 3.0;
 
 ### 2.3.1 整数算术运算
 
-The C++ language provides several numeric types. Perhaps the two most often used are double and int. An int object represents a limited range of whole numbers. There are times when int is the correct choice over double. An int object has operations similar to double (+, \*, -, =, <<, >>), but some diff erences do exist. For example, a fractional part cannot be stored in an int object. The fractional part is lost during an assignment statement.
+The C++ language provides several numeric types. Perhaps the two most often used are double and int. An int object represents a limited range of whole numbers. There are times when int is the correct choice over double. An int object has operations similar to double (+, *, -, =, <<, >>), but some diff erences do exist. For example, a fractional part cannot be stored in an int object. The fractional part is lost during an assignment statement.
+
+在C++语言提供的几种数字类型中，`double`和`int`或许是最常用的两种类型了。`int`对象表示的是一个有限范围内的整数。在某些时候，`int`可能是一个比`double`更正确的选择。`int`对象可以执行的存着与`double`基本相同（即`+`、`*`、`-`、`=`、`<<`、`>>`），但也略有些不同。例如，小数部分不能存储在`int`对象中，下面的赋值语句中，小数部分将会被丢失：
 
 ```C++
-int anInt = 1.999; // The state of anInt is 1, not 1.999
+int anInt = 1.999;     // The state of anInt is 1, not 1.999
 ```
 
-The / operator has diff erent meanings for int and double operands. Whereas the result of 3.0 / 4.0 is 0.75, the result of 3 / 4 is 0. Two integer operands with the / operator have an integer result—not a fl oating-point result. So what happens? An integer divided by an integer results in the integer quotient. For example, the quotient obtained from dividing 3 by 4 is 0. This implies that the same operator (/ in this case) has a different meaning when it has two integer operands.
+The / operator has diff erent meanings for int and double operands. Whereas the result of 3.0 / 4.0 is 0.75, the result of 3 / 4 is 0. Two integer operands with the / operator have an integer result—not a floating-point result. So what happens? An integer divided by an integer results in the integer quotient. For example, the quotient obtained from dividing 3 by 4 is 0. This implies that the same operator (/ in this case) has a different meaning when it has two integer operands.
 
 Another difference is that int objects have a remainder operation symbolized by the % operator. For example, the result of 18 % 4 is the integer remainder after dividing 18 by 4, which is 2. These differences are illustrated in the following program, which shows % and / operating on integer expressions and / operating on floating-point operands. In this example, the integer results describe whole hours and whole minutes rather than the fractional equivalent.
-
-2.3: Arithmetic Expressions
 
 ```C++
 // This program provides an example of int division with '/' for
@@ -655,7 +655,7 @@ int main() {
 }
 ```
 
-**Dialogue**
+**程序会话**
 
 ```shell
 Enter total minutes: 254
