--- a/translation/02_第二章.md
+++ b/translation/02_第二章.md
@@ -569,7 +569,7 @@ int main() {
 (2.0 + 5.0 - 8.0) / 4.0;    // Evaluates to -0.25
 ```
 
-在加了括号之后，`/`运算符现在是最后一个被求值的，而不是第一个。
+在加了括号之后，`/`运算符是最后一个被求值的，而不再是第一个了。
 
 以上这些处理规则针对的只是二元运算符。*二元运算符*的左右两侧通常各有一个操作数。下面我们来看只在右侧有操作数的*一元运算符*，先来看一个同时包含了二元运算符（`*`）和一元负值运算符的表达式(`-`)：
 
@@ -613,17 +613,15 @@ double y = 3.0;
 
 ### 2.3.1 整数算术运算
 
-The C++ language provides several numeric types. Perhaps the two most often used are double and int. An int object represents a limited range of whole numbers. There are times when int is the correct choice over double. An int object has operations similar to double (+, *, -, =, <<, >>), but some diff erences do exist. For example, a fractional part cannot be stored in an int object. The fractional part is lost during an assignment statement.
-
-在C++语言提供的几种数字类型中，`double`和`int`或许是最常用的两种类型了。`int`对象表示的是一个有限范围内的整数。在某些时候，`int`可能是一个比`double`更正确的选择。`int`对象可以执行的存着与`double`基本相同（即`+`、`*`、`-`、`=`、`<<`、`>>`），但也略有些不同。例如，小数部分不能存储在`int`对象中，下面的赋值语句中，小数部分将会被丢失：
+在C++语言所提供的几种数字类型中，`double`和`int`或许是最常用的两种类型了。`int`对象表示的是一个有限范围内的整数。在某些时候，`int`可能是一个比`double`更正确的选择。`int`对象可以执行的操作与`double`基本相同（即`+`、`*`、`-`、`=`、`<<`、`>>`），但也略有些不同。例如，小数部分不能存储在`int`对象中，下面的赋值语句中，小数部分将会被丢失：
 
 ```C++
 int anInt = 1.999;     // The state of anInt is 1, not 1.999
 ```
 
-The / operator has diff erent meanings for int and double operands. Whereas the result of 3.0 / 4.0 is 0.75, the result of 3 / 4 is 0. Two integer operands with the / operator have an integer result—not a floating-point result. So what happens? An integer divided by an integer results in the integer quotient. For example, the quotient obtained from dividing 3 by 4 is 0. This implies that the same operator (/ in this case) has a different meaning when it has two integer operands.
+除此之外，`/`运算符在`int`和`double`这两种类型的操作数上所呈现的意义也是不尽相同的，譬如`3.0 / 4.0`等于`0.75`，而`3 / 4`的结果却是`0`。也就是说，两个整数类型的操作数执行`/`运算的结果会是一个整数，而不是一个浮点数。这会发什么情况呢？情况就是两个整数相除得到的商还是一个整数，例如`3`除以`4`得到的商等于`0`。这就是相同的运算符（譬如这里的`/`）在两个整数类型的操作数上所呈现的不同意义。
 
-Another difference is that int objects have a remainder operation symbolized by the % operator. For example, the result of 18 % 4 is the integer remainder after dividing 18 by 4, which is 2. These differences are illustrated in the following program, which shows % and / operating on integer expressions and / operating on floating-point operands. In this example, the integer results describe whole hours and whole minutes rather than the fractional equivalent.
+int对象的另一个不同就是它支持`%`运算符所代表的取模运算。例如，`18 % 4`的结果应该是`18`整除`4`之后的余数，等于整数`2`。下面我们用一段程序来说明这些差异，我们来具体演示一下整数表达式中的`%`和`/`运算，以及浮点数表达式中的`/`运算。在这个示例中，我们将会使用整小时、整分钟的整数形式来表示结果，而不再采用与之等效的小数形式了。
 
 ```C++
 // This program provides an example of int division with '/' for
@@ -658,16 +656,16 @@ int main() {
 **程序会话**
 
 ```shell
-Enter total minutes: 254
+Enter total minutes: ***254***
 254 minutes can be rewritten as 4.23333 hours
 or as 4 hours and 14 minutes
 ```
 
-The preceding program indicates that even though int objects and double objects are similar, there are times when double is the more appropriate class than int, and vice versa. The double class should be specified when you need a numeric object with a decimal component. If you need whole numbers, select the int class. Also, once the class is chosen, you should consider the diff erences in some of the arithmetic operators. For example, although the +, -, /, and \* operations can be applied to double operands, the % operator may only be used with two integer operands.
+上面这段程序说明了即便`int`对象与`double`对象如此相似，但依然有时`double`类型会比`int`更合适，有时情况则正好相反。基本上，当我们需要带小数部分的数字对象时就选择`double`类型，而但我们需要进行纯整数操作时则应选择`int`类型。另外，在选择好类型之后，就必须要充分考虑一些算术运算符之间的差异。例如，尽管`+`、`-`、`/`、`*`这些运算在`double`类型的操作数上都可使用，但`%`运算就只能作用在两个`int`操作数上。
 
-**SELF-CHECK**
+**自检题**
 
-2-14 What value is stored in nickel?
+2-14 `nickel`中存储的是什么值？
 
 ```C++
 int change = 97;
@@ -675,17 +673,18 @@ int nickel = 0;
 nickel = change % 25 % 10 / 5;
 ```
 
-2-15 What value is stored in nickel when change is initialized to:
+2-15 当`change`被初始化成下列值时，`nickel`中存储的分别是什么值？
 
-| | |
-|-|-|
-| `a.   4` | `d.   15` |
-| `b.   5` | `e.   49` |
-| `c.   10`| `f.   0`  |
+* a.   `4`  
+* b.   `5`  
+* c.   `10`
+* d.   `15`
+* e.   `49`
+* f.   `0`
 
-### 2.3.2 MIXING INTEGER AND FLOATING-POINT OPERANDS
+### 2.3.2 整数与浮点数的混合运算
 
-Whenever integer and floating-point values are on opposite sides of an arithmetic operator, the integer operand is promoted to its floating-point equivalent (3 becomes 3.0, for example). Th e expression then results in a floating-point number. Th e same rule applies when one operand is an int object and the other a double.
+每当整数与浮点数的值分别出现在一个算术运算符两侧时，整数类型的操作数就会升格为等效的浮点数（例如3变成3.0），该表达式的结果会是一个浮点数。同样的规则也适用于一个操作数是`int`对象，另一个操作数是`double`对象的情况。
 
 ```C++
 // Display the value of an expression with a mix of operands
@@ -703,21 +702,22 @@ int main() {
 }
 ```
 
-**Output**
+**程序输出**
 
 56.79
 
-**SELF-CHECK**
+**自检题**
 
-2-16 Evaluate the following expressions:
+2-16 请对以下表达式执行求值运算：
 
-| | |
-|-|-|
-| `a.   5 / 9` | `d.   2 + 4 * 6 / 3` |
-| `b.   5.0 / 9` | `e.  (2 + 4) * 6 / 3` |
-| `c.   5 / 9.0` | `f.  5 / 2` |
+* a.   `5 / 9`
+* b.   `5.0 / 9`
+* c.   `5 / 9.0`
+* d.   `2 + 4 * 6 / 3`
+* e.   `(2 + 4) * 6 / 3`
+* f.  `5 / 2`
 
-### 2.3.3 CONSTANT OBJECTS
+### 2.3.3 常量对象
 
 The state of any object can be, and usually is, altered during program execution. However, it is sometimes convenient to have data with values that cannot be altered during program execution. C++ provides the keyword const for this purpose. Constant objects are created by specifying and associating an identifi er with a value preceded by the keyword const. In essence, this is an object whose state cannot be changed through assignment or stream extraction operations. The general form used to initialize a constant object is a combination of an initialization preceded by the keyword const. Const objects are usually written in upper case.
 
@@ -729,8 +729,8 @@ For example, the value stored in the constant object PI is the floating-point nu
 
 ```C++
 const double PI = 3.1415926;
-const double TAX\_RATE = 0.0751;
-const string PAUSE\_MESSAGE = "Press any key to continue . . .";
+const double TAX_RATE = 0.0751;
+const string PAUSE_MESSAGE = "Press any key to continue . . .";
 ```
 
 These constant objects represent values that cannot be changed while the program is executing; therefore a statement such as PI = PI \* r \* r; generates an error because PI is declared as constant. The value cannot be destroyed with an input statement such as cin &gt;&gt; PI;.
