--- a/translation/02_第二章.md
+++ b/translation/02_第二章.md
@@ -717,15 +717,15 @@ int main() {
 * e.   `(2 + 4) * 6 / 3`
 * f.  `5 / 2`
 
-### 2.3.3 常量对象
+### 2.3.3 `const`对象
 
-The state of any object can be, and usually is, altered during program execution. However, it is sometimes convenient to have data with values that cannot be altered during program execution. C++ provides the keyword const for this purpose. Constant objects are created by specifying and associating an identifi er with a value preceded by the keyword const. In essence, this is an object whose state cannot be changed through assignment or stream extraction operations. The general form used to initialize a constant object is a combination of an initialization preceded by the keyword const. Const objects are usually written in upper case.
+在通常情况下，对象的状态在程序执行的过程中是可以被修改的。但在某些时候，让数据值在程序执行期间无法被修改可能会更方便一些。为了满足这方面的需求，C++为我们提供了`const`关键字。创建`const`对象的方法就是在为相关值指定标识符的同时为其加上`const`关键字前缀。实质上，这就是一个状态不能被赋值或流提取操作改变的对象。初始化一个`const`对象的通用格式就是在一般初始化语句前面加上`const`关键字。另外，`const`对象的名称通常会用大写字母来表示。
 
-**General Form 2.8** *Initializing a constant object*
+**通用格式 2.8**：*初始化`const`对象*
 
 > const *type* *IDENTIFIER* = *expression*;
 
-For example, the value stored in the constant object PI is the floating-point number 3.1415926, and TAX\_RATE is 7.51%.
+例如，存储在`const`对象`PI`中的值是一个浮点数`3.1415926`，而对象`TAX_RATE`中的这是`7.51%`。
 
 ```C++
 const double PI = 3.1415926;
@@ -733,48 +733,46 @@ const double TAX_RATE = 0.0751;
 const string PAUSE_MESSAGE = "Press any key to continue . . .";
 ```
 
-These constant objects represent values that cannot be changed while the program is executing; therefore a statement such as PI = PI \* r \* r; generates an error because PI is declared as constant. The value cannot be destroyed with an input statement such as cin &gt;&gt; PI;.
+由于这些`const`对象所代表的值在程序执行过程中是不能被修改的，所以像`PI = PI * r * r;`这样的语句就会因为`PI`被声明成了`const`而报错。同样的，该值也不会被`cin >> PI;`这样的输入语句所修改。
 
-## 2.4 PROMPT THEN INPUT
+## 2.4 先提示再输入
 
-The output and input operations are often used together to obtain values from the user of the program. Th e program informs the user what must be entered with an output statement and then performs an input operation to set the state of the object. Th is happens so often that this activity can be considered to be a pattern. The Prompt then Input algorithmic pattern has two activities:
+我们在程序中要想从用户那里获取相关的值，通常是输出与输入操作一起使用的。因为程序必须要先用输出语句通知用户，然后才能执行输入操作设置相关对象的状态。这一动作序列太常见了，常见到成为了一种固定模式。这种先提示再输入的算法模式主要两个动作组成：
 
-1. Ask the user to enter a value (prompt).
+1. 先要求用户键入一个值（提示）。
+2. 然后获取相关对象的值（输入）。
 
-2. Obtain the value for the object (input).
-
-| Algorithmic Pattern | Prompt then Input |
+| 算法模式 | 先提示再输入 |
 |---------------------|-------------------|
-|  **Pattern:**       | Prompt then Input |
-|  **Problem:**       | The user must enter something |
-|  **Outline:**       | 1.  Prompt the user for input
-                        2.  Obtain the input |
-|  **Code Example:**  | `cout << "Enter your first name: "; cin >> firstName;` |
+|  **模式：**          | 先提示再输入 |
+|  **问题：**          | 用户必须要键入的内容 |
+|  **纲要：**          | 1. 提示用户要输入的内容。2. 获取输入。 |
+|  **代码示例：**       | `cout << "Enter your first name: "; cin >> firstName;` |
 
-Strange things can happen if the prompt is left out. The user will not know what must be entered. So whenever you require user input, make sure you prompt for it fi rst. Write the code that tells the user precisely what you want. First output the prompt, then obtain the user input.
+如果将提示部分省略，程序就可能会变得很诡异，用户将无从知道他到底要键入什么内容。所以无论什么时候要求用户进行输入，我们都必须要先做好提示，通过编写代码精确地告诉用户我们想要的。总之，请先输出提示，然后再获取用户的输入。
 
-Here is one instance of the Prompt then Input pattern:
+下面来看一下先提示后输入这个模式的具体实例：
 
 ```C++
-cout << "Enter test \#1: ";
+cout << "Enter test #1: ";
 cin >> test1;
 ```
 
-and another:
+这是另一个实例：
 
 ```C++
 cout << "Enter credits: ";
 cin >> credits;
 ```
 
-In general, tell the user the value needed, then read it in with cin.
+通常情况下，我们只需要告诉用户他们所需要提供值，然后用`cin`读取他们的输入即可。
 
 ```C++
-cout << "the prompt for the\_object: ";
-cin >> the\_object;
+cout << "the prompt for the_object: ";
+cin >> the_object;
 ```
 
-The following program uses the Prompt then Input pattern four times. It also reviews operations such as object initialization, assignment, input, and output. Th is program illustrates a more general approach to computing any grade point average. By requesting input data from the user, it can be used over and over again with diff erent sets of input to produce diff erent results. Also notice the presence of the IPO pattern in the implementation.
+在这段程序中，我们使用了四次先提示在输入模式。除此之外，它还带我们回顾了对象初始化、赋值、输入、输出这些操作。该程序所描述的是一个更通用的计算课程平均成绩的方法。通过让用户输入数据，我们可以反腐使用到不同的输入集，以产生不同的结果。另外，读者也可以自行留意一下这段实现中我们是否也用到了IPO模式。
 
 ```C++
 // This program uses input statements to produce a meaningful
@@ -814,7 +812,7 @@ int main() {
 }
 ```
 
-**Dialogue**
+**程序会话**
 
 ```shell
 Enter first name: Pat
@@ -827,11 +825,11 @@ Points : 323.75
 GPA : 3.32051
 ```
 
-Care must be taken when entering numeric data. If you enter a non-digit instead of valid numeric input, the input object cin may no longer be in a “good” state and all subsequent cin statements will be ignored.
+在输入数字类数据时必须要小心仔细一些，一旦我们键入了某个非数字，形成了无效的数字输入，输入对象`cin`对象的“良好”状态就会被破坏，这可能会导致后续所有的`cin`语句被忽略掉。
 
-**SELF-CHECK**
+**自检题**
 
-2-17 Write the value for GPA given each of the dialogues shown below.
+2-17 请写出下面每段程序会话中的GPA值。
 
 ```C++
 // This program uses input statements to produce a
@@ -864,7 +862,7 @@ int main() {
 }
 ```
 
-Dialogue 1:
+程序会话 1：
 
 ```shell
 Credits for course 1: 2.0
@@ -875,7 +873,7 @@ Grade for course 2: 4.0
 a.  ________GPA
 ```
 
-Dialogue 2:
+程序会话 2:
 
 ```shell
 Credits for course 1: 4.0
@@ -886,7 +884,7 @@ Grade for course 2: 3.5
 a.  ________GPA
 ```
 
-Dialogue 3:
+程序会话 3:
 
 ```shell
 Credits for course 1: 1.0
@@ -897,7 +895,7 @@ Grade for course 2: 3.0
 a.  ________GPA
 ```
 
-## 2.5 IMPLEMENTATION ERRORS AND WARNINGS
+## 2.5 程序实现中的错误与警告
 
 There are several types of errors and warnings that occur during the implementation phase of problem solving:
 
