--- a/translation/02_第二章.md
+++ b/translation/02_第二章.md
@@ -1122,11 +1122,13 @@ Enter anotherInt: anotherInt: 0
 
 ### 2.5.5 意向性错误
 
-Even when no compile time errors are found and no runtime errors occur, the program still may not execute properly. A program may run and terminate normally, but it may not be correct. Let’s make one small change to an earlier program to get an incorrect program.
+即使在既没有编译时错误也没有运行时错误的情况下，程序也是有可能会执行不正常的。因为一个程序即便能正常运行到结束，也可能会得到不正确的结果。下面，让我们来对之前的程序做一点小小的修改，将其变成一个不正确的程序。
 
-    cout << "Average: " << (n / sum);
+```C++
+cout << "Average: " << (n / sum);
+```
 
-The interactive dialogue may now look like this:
+现在该程序的交互会话过程应该如下：
 
 ```shell
 Enter sum: 291
@@ -1134,13 +1136,13 @@ Enter n: 3
 Average: 0.010309
 ```
 
-Such intent errors occur when the program does what was typed, not what was intended. Unfortunately, the compiler does not locate intent errors. Th e expression n/sum is syntactically correct—the compiler just has no way of knowing that this programmer intended to write sum/n instead.
+如你所见，该程序在执行键入操作时发生了意向性错误，这显然不符合它的原本意向。不幸的是，编译器是无法定位意向性错误的，毕竟`n/sum`在语法上是完全正确的，编译器不可能会知道程序员原本想写的是`sum/n`。
 
-Intent errors are the most insidious and usually the most difficult to correct. Th ey may also be difficult to detect—the user, tester, or programmer may not know they even exist.
+意向性错误通常是最诡异也最难纠正的一种错误。而且，它们也往往很难被检测出来，用户、测试者、程序员都很难察觉到它们的存在。
 
-**SELF-CHECK**
+**自检题**
 
-2-19 Assuming a program is supposed to fi nd an average given the total sum and number of values in a set, then the following dialogue is generated. What clue reveals the presence of an intent error?
+2-19 假设我们现在有一个能根据给定集合的总和值以及值的个数来求取平均值的程序，它的执行会话过程如下，你是否能从中看出什么导致意向性错误的线索？
 
 ```shell
 Enter sum: 100
@@ -1148,7 +1150,7 @@ Number : 4
 Average : 0.04
 ```
 
-2-20 Assuming the following code was used to generate the dialogue above, how is the intent error to be corrected?
+2-20 假设产生上述会话的是下面这段代码，该意向性错误该如何纠正？
 
 ```C++
 cout << "Enter sum: ";
@@ -1160,25 +1162,25 @@ average = sum / n;
 cout << "Average : " << average << endl;
 ```
 
-2-21 List the type of error (compile time, runtime, linktime, or intent) or warning that exists when the last statement in the preceding program is changed to:
+2-21 请列出当我们将上述程序中的相关语句修改成下列语句时它们各自会产生的错误类型（即编译时错误、连接时错误、运行时错误或意向性错误）和警告：
 
 * a.  `cout << "Average: " << "sum / n";`
 * b.  `cout << "Average: ", sum / n;`
 * c.  `cout << "Average: " << sum / n`
 
-### 2.5.6 WHEN THE SOFTWARE DOESN’T MATCH THE SPECIFICATION
+### 2.5.6 当软件的设计与问题说明不相符时
 
-Even when a process has been automated and delivered to the customer in working order according to the developers, there may still be errors. Th ere have been many instances of software working, but not doing what it was supposed to do. Th is could be from a failure to meet the problem statement, which occurs when the software developers don’t understand the customer’s problem statement. Something could have been missed. Something could have been misinterpreted. A related error occurs when the client specifi es the problem incorrectly. This could be the case when the requester isn’t sure what they want. A trivial or critical omission in specifi cation may occur, or the request may not be written clearly. Also, the requester may change their mind after problem solving has begun.
+即便进入了自动化阶段，开发人员已经按照工作顺序将产品发布给客户了之后，错误也依然会存在。因为有许多软件虽然可以工作了，但它并没有做到该做的事。这可能是该程序没有达到问题陈述的要求，会发生这种情况通常是因为该软件的开发人员没有理解客户的问题陈述。他们可能遗漏了什么，或者误解了什么。另外，当客户没有正确描述相关问题时，我们还会遇到一些相关性方面的错误，会发生这种情况通常是因为需求方无法确定需求，他们的需求说明可能过于琐碎或者出现了严重的纰漏。况且，有些需求方还经常会在我们开始解决问题之后改变他们的想法。
 
-For the most part, the end-of-chapter programming projects in this textbook ask you to fulfill the problem specifi cation. If you think there is an omission or there is something you don’t understand, don’t hesitate to ask questions. It is better to understand the problem and know what it is that you are to trying to solve before getting to the design and implementation phases of problem solving. Although not intended, the problem may be incorrectly or incompletely specified—this does actually happen in the real world!
+在大多数情况下，本书在每一章的末尾都会布置一个编程项目，这些项目都会有一份相应的问题说明。如果你们认为这些说明中有任何纰漏或者不理解的地方，请直接提出来，千万不要犹豫。在进入问题解决的设计和实现阶段之前，请务必要理解并掌握自己要解决的是什么问题。尽管不会有人故意为之，但问题说明经常会存在不正确或不完整的情况，这在现实世界中是很常见的。
 
-## CHAPTER SUMMARY
+## 本章小结
 
-* The smallest pieces of a program (tokens) were shown to help you understand general forms and fix errors.
-* Objects are entities that have a name, state (value), and operations. Output (cout &lt;&lt;) and input (cin &gt;&gt;) operations are used in concert with double and string objects to set their states. Th ere are at least three techniques for modifying the state of an object:
-  * initialization with double x = 0.0;
-  * input with cin &gt;&gt;
-  * assignment with =
+* 最小的程序零件（标记）被证明有助于我们理解通用格式和修复错误。
+* 对象是由名称、状态（值）及其能执行的操作组成的一个实体。输出（`cout <<`）与输入（`cin >>`）操作通常会一道被用于`double`、`string`这些对象的状态设置。我们至少有三种修改对象状态的技术：
+  * 使用`double x = 0.0;`这样的初始化语句。
+  * 使用`cin >>`输入操作。
+  * 使用`=`赋值操作符。
 * Knowledge of existing objects aids the program development process. For example, knowing about cin, cout, string, and numeric objects such as int and double precludes the necessity of implementing many intricate operations such as input, output, addition, and multiplication. Fortunately, other programmers have already built them.
 * The objects named std::cout and std::cin are so frequently used that they are automatically made available for easy screen output and keyboard input with \#include &lt;iostream&gt;. If you add using namespace std; you do not have to precede cout, cin, and endl with std:: .
 * Arithmetic expressions are made up of operators +, -, \*, /, and % (remainder). A binary arithmetic operator requires two operands, which may be numeric constants such as 1 and 2.3, numeric objects, or other arithmetic expressions.
@@ -1192,7 +1194,7 @@ For the most part, the end-of-chapter programming projects in this textbook ask 
 * Errors may be present because the problem statement was incorrect or incomplete.
 * Intent errors eventually prove to be the most difficult to fix—they can be diffi cult to detect.
 
-## EXERCISES
+## 练习题
 
 1. List three operations that may be applied to numeric types like double.
 2. Describe the value(s) stored in string objects.
