第二章完成

--- a/translation/02_第二章.md
+++ b/translation/02_第二章.md
@@ -1469,7 +1469,7 @@ EEEEE o        T    o        M     M o
 
 ### 2D YODA
 
-Write a C++ program that obtains any three strings from the user and outputs them in reverse order with one space between them. (*Hint:* There is no process step; only input followed by output.)
+请编写一段C++程序，先从用户那里获取任意三个字符串，然后将它们反序输出，彼此之间用空格符隔开。（*提示*：这个程序没有处理步骤，只有先输入再输出。）
 
 ```shell
 Enter string one: happy
@@ -1478,18 +1478,18 @@ Enter string three: I
 I am happy
 ```
 
-### 2E WEIGHTED AVERAGE
+### 2E 加权平均值计算
 
-Implement and test a C++ program that will compute the course grade using this weighted scale:
+请实现一个能根据下面加权比例计算课程平均分的C++程序，并测试它。
 
-| Assessment | Weight |
-|------------|--------|
-| Quiz average | 20% |
-| Midterm      | 20% |
-| Lab grade    | 35% |
-| Final exam   | 25% |
+| 评估项目 | 加权比重 |
+|--------|--------|
+| 测验平均成绩 | 20% |
+| 期中考试成绩 | 20% |
+| 实验室成绩  | 35% |
+| 期末考试成绩 | 25% |
 
-One dialogue should look like this:
+该程序应该有如下会话过程：
 
 ```shell
 Enter Quiz Average: 90.0
@@ -1499,43 +1499,43 @@ Enter Final Exam: 90.0
 Course Average = 90
 ```
 
-### 2F SECONDS
+### 2F 读秒器
 
-Write a program that reads a value in seconds and displays the number of hours, minutes, and seconds represented by the input. Here are two sample dialogues:
+请编写一个读取秒值的程序，它会将读取到输入转换成小时、分钟、秒数的形式，下面是它的两个会话样例：
 
 ```shell
-Enter seconds: 32123       Enter seconds: ***61***
+Enter seconds: 32123       Enter seconds: 61
 8:55:23                    0:1:1
 ```
 
-### 2G MINIMUM COINS
+### 2G 最小钱币数
 
-Write a C++ program that prompts for an integer that represents the amount of change (in cents) to be handed back to a customer in the United States. First, display the minimum number of half dollars, quarters, dimes, nickels, and pennies that will make the correct change. (*Hint*: With increasingly longer expressions, you could use / and % to evaluate the number of each coin. Or you could calculate the total number of coins with / and the remaining change with %.) Verify that your program works correctly by running it with a variety of input. Here are two sample dialogues:
-
-| | |
-|-|-|
-| Enter change \[0...99\]: ***83*** | Enter change \[0...99\]: ***14*** |
-| Half(ves) : 1  | Quarter(s) : 1 |
-| Dime(s) : 0 | Nickel(s) : 1 |
-| Penny(ies) : 3 | Half(ves) : 0 |
-| Quarter(s) : 0 | Dime(s) : 1 |
-| Nickel(s) : 0 | Penny(ies) : 4 |
-
-### 2H EINSTEIN’S NUMBER
-
-It is said that Albert Einstein used to take great delight in baffling friends with the following puzzle. It could be repeated something like this:
-
-* Write 1089 on a piece of paper, fold it, and hand it to another for safekeeping.
-* Ask someone else to write down any three-digit number, emphasizing that the fi rst and last digits must diff er: 654 is okay, while 454 and 656 are not allowed.
-* Reverse that written down number: if starting with 654, write 456.
-* Compute the diff erence of the written down three digit number and its reverse: use abs(456-654) = 198
-* Once this is done, reverse the new number: 198 becomes 891.
-* Th en add the new number to its reverse: 198 + 891 = 1089.
-
-If all goes as planned, observers will be amazed. Th e number written down at the start, 1089, will always be the same as the end result of this mathematical trick. Replicate this puzzle as a C++ program. Your program dialogue must look like this when the user enters 541.
+请编写一个C++程序，该程序会提示用户输入一个整数以代表要找还给一个美国客户的金额（以美分为单位）。然后按照50美分、25美分、10美分、5美分、1美分的顺序依次输出各种币种在找还指定金额过程中所需的最小数量。（*提示*：你可以根据表达式的增长，动态运用`/`和`%`这两种运算符来计算出所需各币种的数量，或者也可以先用`/`算出所需的钱币总数，然后再用`%`算出剩余的找还金额。），然后请用各种输入验证该程序是否能正常工作，下面是我们提供的两个会话样例。
 
 ```shell
-Enter a 3 digit number ( first and last digits must differ): ***541***
+Enter change [0...99]: 83           Enter change [0...99]: 14
+Half(ves) : 1                       Quarter(s) : 1
+Dime(s) : 0                         Nickel(s) : 1
+Penny(ies) : 3                      Half(ves) : 0
+Quarter(s) : 0                      Dime(s) : 1
+Nickel(s) : 0                       Penny(ies) : 4
+```
+
+### 2H 爱因斯坦的数字游戏
+
+据说Albert Einstein很自豪自己曾经出了一道谜题难倒了他的朋友们，该题目的要求是这样的：
+
+* 先在一张纸上写下1089这个数字，然后把这张纸折叠起来交给另一个人保管。
+* 然后让其他人写出任意一个三位数，要求是这个数字的第一个数不能与最后一个数相同，譬如这个数可以是654，但不能是454和656。
+* 接下来将这个三位数反过来写一遍，譬如先前写的是654，现在就写下456。
+* 然后计算出这个三位数与它反向三位数之间的差值，譬如我们在这里调用`abs(456-654)`，结果是198。
+* 得到结果之后请再次反转这个新数字，譬如先前的结果是198，现在就是891。
+* 然后将这个新数字与它的反向数字相加，会发现`198 + 891 = 1089`。
+
+如果一切顺利，这个游戏的观众应该会觉得很惊奇。一开始写下的这个1089，始终会与这个数学游戏的最终结果相同。现在请你将这个游戏复述成一个C++程序，然后在程序会话中看看用户输入为541时的结果。
+
+```shell
+Enter a 3 digit number ( first and last digits must differ): 541
 541 -- original
 145 -- reversed
 396 -- difference
@@ -1543,7 +1543,7 @@ Enter a 3 digit number ( first and last digits must differ): ***541***
 1089 -- difference + reverse of the difference
 ```
 
-You don’t need to error check the three-digit number. Assume input is in the range of 100 to 998 where the fi rst and third digits are not the same. 101, 252, or 989 are not expected to generate 1089. (*Hint:* To find the diff erence between two numbers, use the absolute value function abs. Th e argument is an expression that subtracts two numbers. You may need to \#include &lt;cstdlib&gt;.)
+在该程序中，我们无需检查输入的三位数是否有错，就直接假设输入的数是在100到998之间，它的第一个数与最后一个数不相同，像101、252、989这样的数字是不会产生1089这个结果的。（*提示*：为了计算出两个数的差值。我们在这里需要调用`abs`这个求绝对值的函数，该函数的参数是一个执行两数相减运算的表达式。当然，要使用这个函数，我们还必须加上`#include <cstdlib>`这条指令。)
 
 ```C++
 #include <cstdlib>   // A new include
@@ -1558,12 +1558,12 @@ int main() {
 }
 ```
 
-### 2I TIME DIFFERENCE
+### 2I 计算时间差
 
-Write a C++ program that takes two diff erent train departure times (where 0 is midnight, 0700 is 7:00 a.m., 1314 is 14 minutes past 1:00 p.m., and 2200 is 10 p.m.) and prints the diff erence between the two times in hours and minutes. Assume both times are on the same date and that both times are valid. For example, 1099 is not a valid time because the last two digits are minutes, which should be in the range of 00 through 59. 2401 is not valid because the hours (the fi rst two digits) must be in the range of 0 through 23 inclusive. For example, if train A departs at: 1255 and train B departs at: 1305 the difference would be 0 hours and 10 minutes. One dialogue should look like this, but run your program several times for several test cases.
+请编写一个C++程序，该程序会记录两列不同火车的出发时间（这里0代表凌晨零点、0700代表上午7:00、1314代表下午1:00后的第14分钟、2200代表的是晚上10点），并以小时加分钟的形式打印出这两个时间的差距。这里我们得假设双方的时间都在同一天，并且都得是有效时间。例如，1099不是一个有效时间，因为其最后两位数字代表的应该是分钟，它的取值范围应该是在00到59之间。同理，2401也不是一个有效时间，因为其前两位数字代表的是小时，它的取值范围必须在00到23之间。总之在这种情况下，如果A列车是在1255出发，而B列车则是在1305出发，那么这两列火车的时间差应该就是0小时十分钟。我们在下面提供了一个该程序的会话样例，当然，你可以多试几组测试用例。
 
 ```shell
-Train A departs at: ***1255***
-Train B departs at: ***1305***
+Train A departs at: 1255
+Train B departs at: 1305
 Difference: 0 hours and 10 minutes
 ```
