第二章完成

--- a/translation/02_第二章.md
+++ b/translation/02_第二章.md
@@ -1558,7 +1558,7 @@ int main() {
 }
 ```
 
-### 2I 计算时间差
+### 2I 时间差
 
 请编写一个C++程序，该程序会记录两列不同火车的出发时间（这里0代表凌晨零点、0700代表上午7:00、1314代表下午1:00后的第14分钟、2200代表的是晚上10点），并以小时加分钟的形式打印出这两个时间的差距。这里我们得假设双方的时间都在同一天，并且都得是有效时间。例如，1099不是一个有效时间，因为其最后两位数字代表的应该是分钟，它的取值范围应该是在00到59之间。同理，2401也不是一个有效时间，因为其前两位数字代表的是小时，它的取值范围必须在00到23之间。总之在这种情况下，如果A列车是在1255出发，而B列车则是在1305出发，那么这两列火车的时间差应该就是0小时十分钟。我们在下面提供了一个该程序的会话样例，当然，你可以多试几组测试用例。
 
