第三章开始

--- a/translation/03_第三章.md
+++ b/translation/03_第三章.md
@@ -1,41 +1,24 @@
-**C H A P T E R T H R E E**
+# 第3章 自由函数的运用
 
-Using Free Functions
+**前章回顾**
 
-SUMMING UP
+You should have now gained hands-on experience with your system, the syntax of the language, error messages, and program development—from beginning to end. Most programming projects in the early chapters of this textbook are instances of the IPO algorithmic pattern. You should now be able to put these three steps in the proper order and understand the ramifications of omitting one or mixing up the order.
 
-> You should have now gained hands-on experience with your system, the
-> syntax of the language, error messages, and program development—from
-> beginning to end. Most programming projects in the early chapters of
-> this textbook are instances of the IPO algorithmic pattern. You should
-> now be able to put these three steps in the proper order and
-> understand the ramifi cations of omitting one or mixing up the order.
+经过之前的学习，我们现在对自己的系统、这门语言的语法、报错信息及其程序开发，所有的这一切从头到尾都应该已经有了一个直观认知了。另外，本书之前章节中的大部分编程项目实施的都是IPO这个算法模式，相信读者现在应该可以在实践中按照正常的顺序安排这三个步骤，并能理解省略其中某个步骤或以某种混合顺序执行的情况了。
 
-COMING UP
+**本章提要**
 
-> Software developers often use existing software, a practice that saves
-> time and money. Th is chapter introduces one way to reuse existing
-> software. Programmers begin with a substantial base of tested
-> software. You will learn how to use existing functions by reading
-> function headings and to determine what the functions do by reading
-> their pre- and postconditions—the contracts for using those functions.
-> Th e chapter ends with a review of the categories of errors you will
-> probably have encountered. After studying this chapter, you will be
-> able to
+Software developers often use existing software, a practice that saves time and money. Th is chapter introduces one way to reuse existing software. Programmers begin with a substantial base of tested software. You will learn how to use existing functions by reading function headings and to determine what the functions do by reading their pre- and postconditions—the contracts for using those functions. The chapter ends with a review of the categories of errors you will probably have encountered. After studying this chapter, you will be able to
 
--   evaluate some mathematical and trigonometric functions
+- evaluate some mathematical and trigonometric functions
+- use arguments in function calls
+- appreciate why programmers divide software into functions
+- read function headings so you can use existing functions
 
--   use arguments in function calls
+## 3.1 cmath FUNCTIONS
 
--   appreciate why programmers divide software into functions
+C++ defines a large collection of mathematical and trigonometric functions that may be used with doubles. Here are two:
 
--   read function headings so you can use existing functions
-
-3.1 cmath FUNCTIONS
-
-> C++ defi nes a large collection of mathematical and trigonometric
-> functions that may be used with doubles. Here are two:
->
 > sqrt(x) // Return the square root of x pow(x,y) // Return x to the yth
 > power
 >
